# ev3_sensor_color

./: Cargo.toml  build.sh  foo.csv  programas]
programas/: ev3-motor.py  ev3dev-color-sensor
src/: color_trainer.rs  gyroclass.rs  main.rs  pid_controller_basic.rs  pure_odometry.rs
