[package]
name = "ev3dev-color-sensor"
version = "0.1.0"
edition = "2021"

[dependencies]
termcolor = "1.1.3"
ev3dev-lang-rust = { git = "https://github.com/LucasMartinsUthi/ev3dev-lang-rust" }

csv = "1.1"
serde = { version = "1", features = ["derive"] }
rand = "0.8.5"
clap = { version = "3.1.15", features = ["derive"] }

[profile.release]
lto = true
